<resources>
    <string name="app_name">コエステーション</string>
    <string name="ettPtText">A sight or prospect, typically of attractive natural scenery, that can be taken in by the eye from a particular place.</string>
    <string name="tvwPtCountry">Language:</string>
    <string name="tvwPtStyle">Style:</string>
    <string name="tvwPtGender">Gender:</string>
    <string name="tvwPtNaturalSampleRateHertz">NaturalSampleRateHertz:</string>
    <string name="tvwPtPitch">Pitch Rate:</string>
    <string name="tvwPtSpeakRate">Speak Rate:</string>
    <string name="btnPtSpeechText">Speak</string>
    <string name="btnPtSpeechResume">Resume</string>
    <string name="btnPtSpeechPause">Pause</string>
    <string name="btnPtSpeechStop">Stop</string>
    <string name="btnPtRefresh">Refresh</string>
    <string name="str_age">年齢</string>
    <string name="str_name">ニックネーム</string>
    <string name="str_email">Eメール</string>
    <string name="str_home_content">うわー！\n シェイク</string>
    <string name="str_home_remark">ホームリマークス</string>
    <string name="str_address">住所</string>
    <string name="str_job">ジョブ</string>
    <string name="str_input">ジョブ</string>
    <string name="str_register">登録</string>
    <string name="str_password">パスワード</string>
    <string name="str_confirm_password">もう一度パスワード</string>
    <string name="str_login">ログイン</string>
    <string name="str_have_not_account">まだアカウントを持っていませんか？</string>
    <string name="str_change">変化する</string>
    <string name="str_voice_record">音声録音</string>
    <string name="str_home">ホームホーム</string>
    <string name="str_edit_profile">プロファイル編集</string>
    <string name="str_change_voice">声を変える</string>
    <string name="str_welcome">ようこそ</string>
    <string name="import_progress">Audio file import&#8230;</string>
    <string name="record_processing">Waveform drawing calculations&#8230;</string>
    <string name="str_pause">Pause</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="default_file_name">userVoice</string>
    <string name="str_input_letters">心からの手紙を入力してください!</string>
    <string name="message_content_loading">読み込み中</string>
    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>


    <string name="record_in_progress">Recording</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>

    <!-- Dialogs -->
    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">はい</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>
    <string name="send_to">Send to</string>

    <!-- google admob  -->
    <string name="test_interstitial_video" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
</resources>
