<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10"
    tools:context=".fragments.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRegisterText"
                android:textSize="16dp"
                android:text="@string/str_name">
            </TextView>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp">
            </View>
            <EditText
                android:id="@+id/edtNickName"
                android:layout_width="@dimen/dimen_register_box_width"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/item_edit_radius"
                android:hint="@string/str_input">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRegisterText"
                android:textSize="16dp"
                android:text="@string/str_password">
            </TextView>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp">
            </View>
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="@dimen/dimen_register_box_width"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textPassword"
                android:background="@drawable/item_edit_radius"
                android:hint="@string/str_input">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRegisterText"
                android:textSize="16dp"
                android:text="@string/str_confirm_password">
            </TextView>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp">
            </View>
            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="@dimen/dimen_register_box_width"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textPassword"
                android:background="@drawable/item_edit_radius"
                android:hint="@string/str_input">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRegisterText"
                android:textSize="16dp"
                android:text="@string/str_age">
            </TextView>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp">
            </View>

            <Spinner
                android:id="@+id/spinnerAge"
                android:layout_width="@dimen/dimen_register_box_width"
                android:layout_height="40dp"
                android:background="@drawable/item_edit_radius"
                android:spinnerMode="dropdown">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRegisterText"
                android:textSize="16dp"
                android:text="@string/str_address">
            </TextView>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp">
            </View>
            <Spinner
                android:id="@+id/spinnerAddress"
                android:layout_width="@dimen/dimen_register_box_width"
                android:layout_height="40dp"
                android:background="@drawable/item_edit_radius"
                android:spinnerMode="dropdown">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRegisterText"
                android:textSize="16dp"
                android:text="@string/str_job">
            </TextView>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp">
            </View>

            <EditText
                android:id="@+id/edtJob"
                android:layout_width="@dimen/dimen_register_box_width"
                android:layout_height="40dp"
                android:background="@drawable/item_edit_radius"
                android:hint="@string/str_input"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorButtonBlue"
        android:text="@string/str_change"
        android:textSize="20dp"
        android:background="@drawable/item_button_gradient"
        android:gravity="center"
        >
    </Button>


</RelativeLayout>